# practice_cpp

./: CMakeLists.txt  README.md  main.cpp  type_inference.cpp  utils.h
advanced_cpp20_programming/type_and_object/: README.md  function_object.cpp  runtime_polymorphism.cpp  type_inference.cpp  value_categroy.cpp
